# PetitCCompiler

./: .gitignore  HOWTO.md  LICENSE  Makefile  README.md  TODO.md  Todo.md
compiler/: Makefile  dune-project
compiler/test/: dune  prettyPrinterTests.ml  tests-13-oct.tgz
compiler/tests/: README  test.sh  test_cpy.sh
compiler/tests/customTests/: easy.c  lexingInt.c
