(lang dune 3.5)
(using menhir 2.0)
(wrapped_executables false)

(authors "ANASTASSIADES Antoine" "KEDADRY Yannis")
(license MIT License)


(package
 (name compiler)
 (depends ocaml dune ocamllex ocolor )
 (synopsis "A compiler for the PetitC language")
 (allow_empty))

; (generate_opam_files true)

(source
 (github MrBigoudi/PetitCCompiler))


; (authors "Author Name")

; (maintainers "Maintainer Name")

; (license LICENSE)

; (documentation https://url/to/documentation)

; (package
;  (name compiler)
;  (synopsis "A short synopsis")
;  (description "A longer description")
;  (depends ocaml dune)
;  (tags
;   (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
